# playwright-autopilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: autopilot.yml
demo/: linkedin_demo.py  record_demo.py  record_full_demo.sh
demo/output/: demo_video.webm  test_generated.py
examples/: quickstart.py  replay_only.py  self_healing.py  with_claude_api.py
mcp-configs/: claude-code.json  windsurf.json
playbooks/: github-login.json  google-search.json  hackernews-top.json
src/autopilot/: __init__.py  agent.py  cli.py  codegen.py  importers.py
src/autopilot/core/: assertions.py  audit.py  browser.py  digest.py  disk_snapshots.py  explorer.py  healer.py  playbook.py  repl.py  runner.py  snapshot.py  vision.py  visual_diff.py
src/autopilot/integrations/: claude_api.py  langchain_tools.py
src/autopilot/llm/: base.py  claude.py  factory.py  litellm_provider.py  openai.py
src/autopilot/mcp/: server.py
tests/harness/: conftest.py  test_agent.py  test_benchmark.py  test_disk_snapshots.py  test_explorer.py  test_integration.py  test_llm_factory.py  test_locator_engine.py  test_mcp_server.py  test_new_features.py  test_playbook.py  test_server.py  test_tier0_replay.py  test_tier1_heal.py  test_tier2_compact_ai.py  test_tier3_full_ai.py  test_tier4_vision.py
tests/real_world/: conftest.py  test_amazon_ac.py  test_stress.py
